# bazel-playground

./: .bazelignore  .bazelrc  .gitignore  BUILD  MODULE.bazel  Readme.md  WORKSPACE  config.yaml  main.py  requirements.in  requirements.txt  requirements_lock.txt
docs/: CLANG_SYSROOT_TESTING.md  gcc_toolchain_architecture.md  hermetic_toolchain_verification.md  integration_guide.md  python_hermetic_setup.md  remote_execution_buildbarn.md
examples/consumer/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  bazel-bin  bazel-consumer  bazel-out  bazel-testlogs  hello.cc  hello.py  requirements_lock.txt
src/: BUILD  main.py
src/cpp/: BUILD  github_client.cc  github_client.h  github_client_test.cc  main.cc
src/python/: BUILD  main.py  test_main.py
toolchain/: BUILD  BUILD.clang_sysroot  BUILD.gcc  BUILD.gcc10  cc_toolchain_config.bzl  clang.bzl  clang_cc_toolchain_config.bzl  defs.bzl  gcc_toolchain_config.bzl  inject_config.patch
