"""
Bazel module definition for py_youtube

Uses Bzlmod for dependency management instead of WORKSPACE.
"""

bazel_dep(name = "rules_python", version = "0.24.0")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "cpr", version = "1.12.0")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "toolchains_llvm", version = "1.2.0")

# Define the GCC toolchain repository
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# --- GCC 12.3 toolchain (Bootlin stable-2024.02-1) ---
http_archive(
    name = "gcc_toolchain",
    build_file = "//toolchain:BUILD.gcc",
    sha256 = "19c8e5bc1395636aef1ce82b1fa7a520f12c8b4ea1b66ac2c80ec30dcf32925e",
    strip_prefix = "x86-64--glibc--stable-2024.02-1",
    url = "https://toolchains.bootlin.com/downloads/releases/toolchains/x86-64/tarballs/x86-64--glibc--stable-2024.02-1.tar.bz2",
    patches = ["//toolchain:inject_config.patch"],
    patch_args = ["-p1"],
)

# --- GCC 10.3 toolchain (Bootlin stable-2021.11-5, closest to GCC 9, glibc 2.34) ---
http_archive(
    name = "gcc10_toolchain",
    build_file = "//toolchain:BUILD.gcc10",
    sha256 = "6fe812add925493ea0841365f1fb7ca17fd9224bab61a731063f7f12f3a621b0",
    strip_prefix = "x86-64--glibc--stable-2021.11-5",
    url = "https://toolchains.bootlin.com/downloads/releases/toolchains/x86-64/tarballs/x86-64--glibc--stable-2021.11-5.tar.bz2",
    patches = ["//toolchain:inject_config.patch"],
    patch_args = ["-p1"],
)

# Resolve the absolute path of the gcc_toolchain repos at fetch time.
# This is required because GCC resolves built-in include paths to absolute
# filesystem paths, and cxx_builtin_include_directories must match exactly.
gcc_toolchain_config = use_repo_rule("//toolchain:gcc_toolchain_config.bzl", "gcc_toolchain_config")
gcc_toolchain_config(name = "gcc_toolchain_config", gcc_repo_name = "gcc_toolchain")
gcc_toolchain_config(name = "gcc10_toolchain_config", gcc_repo_name = "gcc10_toolchain")

register_toolchains("//toolchain:gcc_toolchain")
register_toolchains("//toolchain:gcc10_toolchain")

# --- Clang 17 toolchain (via toolchains_llvm) ---
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# Configure Python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

# Configure pip
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_pip_install",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "my_pip_install")