"""
Example consumer workspace demonstrating how to use hermetic_toolchains.

This MODULE.bazel shows how another project depends on the
hermetic_toolchains module to get hermetic GCC, Clang, and Python
toolchains without having to configure them itself.
"""

module(
    name = "my_app",
    version = "0.1.0",
)

# --- Step 1: Depend on hermetic_toolchains ---
# In production, this would reference a git_override, archive_override,
# or a Bazel registry entry.  For local development, use local_path_override below.
bazel_dep(name = "hermetic_toolchains", version = "1.0.0")

# --- Step 2: Application dependencies ---
# Only add what YOUR project needs.  Toolchain deps (bazel_skylib,
# toolchains_llvm, etc.) are pulled in transitively.
bazel_dep(name = "rules_python", version = "0.24.0")
bazel_dep(name = "rules_cc", version = "0.1.0")

# --- Step 3: Set up Clang 17 (must be done by root module) ---
# GCC 12/10 and Python are registered automatically by hermetic_toolchains.
# Clang requires root-module setup because toolchains_llvm restricts its
# extension to the root module only.
bazel_dep(name = "toolchains_llvm", version = "1.2.0")

# The sysroot archive — same Bootlin GCC 10.3 used by hermetic_toolchains.
# This MUST be declared here because http_archive repos from dependencies
# are not visible to the root module.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "clang_sysroot",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
filegroup(
    name = "sysroot_files",
    srcs = glob(["**/*"]),
)
""",
    sha256 = "6fe812add925493ea0841365f1fb7ca17fd9224bab61a731063f7f12f3a621b0",
    strip_prefix = "x86-64--glibc--stable-2021.11-5/x86_64-buildroot-linux-gnu/sysroot",
    url = "https://toolchains.bootlin.com/downloads/releases/toolchains/x86-64/tarballs/x86-64--glibc--stable-2021.11-5.tar.bz2",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "17.0.6",
    stdlib = {
        "linux-x86_64": "builtin-libc++",
    },
    link_flags = {
        "linux-x86_64": [
            "--target=x86_64-unknown-linux-gnu",
            "-lm",
            "-no-canonical-prefixes",
            "-fuse-ld=lld",
            "-Wl,--build-id=md5",
            "-Wl,--hash-style=gnu",
            "-Wl,-z,relro,-z,now",
            "-l:libc++.a",
            "-l:libc++abi.a",
            "-Wl,--dynamic-linker=external/_main~_repo_rules~clang_sysroot/lib/ld-linux-x86-64.so.2",
            "-Wl,-rpath,external/_main~_repo_rules~clang_sysroot/lib",
            "-Wl,-rpath,external/_main~_repo_rules~clang_sysroot/usr/lib",
            "-Wl,-rpath,external/_main~_repo_rules~clang_sysroot/lib64",
        ],
    },
)
llvm.sysroot(
    name = "llvm_toolchain",
    targets = ["linux-x86_64"],
    label = "@clang_sysroot//:sysroot_files",
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# --- Step 4: Configure YOUR pip packages ---
# hermetic_toolchains provides the Python interpreter (3.11);
# you manage your own pip packages.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_pip_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "my_pip_deps")

# --- Local development override ---
# Point to the local checkout of hermetic_toolchains.
# Remove this and publish to a registry for production use.
local_path_override(
    module_name = "hermetic_toolchains",
    path = "../..",
)
